...
  String get tutorial_bookmarks_title => 'BOOKMARKED TUTORIALS';

  @override
  String get tutorial_search_title => 'SEARCH TUTORIALS';

  @override
  String get tutorial_nav_tutorials => 'Tutorials';

  @override
  String get tutorial_nav_bookmarks => 'Bookmarks';

  @override
  String get tutorial_nav_search => 'Search';

  @override
  String get podcasts_browse => 'Browse';
...
  String get cancel => 'Cancel';

  @override
  String get leave => 'Leave';

  @override
  String get back => 'Back';

  @override
  String get completed => 'Completed';

  @override
  String get start => 'Start';
...
